Incorporated comments from Krishna